--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
 
       <div class="car-item" *ngFor="let car of carsData">
         <div class="car-item-image">
-          <img src="../assets/images/{{car.image}}" alt="Image 1">
+          <img src="{{car.image}}" alt="Image 1">
         </div>
         <div class="car-item-title">{{car.name}}</div>
         <div class="car-item-info">
